--- a/DirectX_PKT/MyCore/MyCore.vcxproj
+++ b/DirectX_PKT/MyCore/MyCore.vcxproj
@@ -49,6 +49,14 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="EndingLevel.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="EndingBackGround.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Fan.h" />
     <ClInclude Include="FishEyes.h" />
     <ClInclude Include="HallDining.h">
@@ -134,6 +142,14 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="EastHallCorner.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="EndingLevel.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="EndingBackGround.cpp">
       <SubType>
       </SubType>
     </ClCompile>
