--- a/DirectX_PKT/MyCore/MyCore.vcxproj
+++ b/DirectX_PKT/MyCore/MyCore.vcxproj
@@ -37,6 +37,10 @@
     </ClInclude>
     <ClInclude Include="Button.h" />
     <ClInclude Include="CCTVBackGround.h" />
+    <ClInclude Include="Chica.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Door.h">
       <SubType>
       </SubType>
@@ -133,6 +137,10 @@
     </ClCompile>
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="CCTVBackGround.cpp" />
+    <ClCompile Include="Chica.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Door.cpp">
       <SubType>
       </SubType>
