조명 왼쪽 오른쪽 추가 완료 및 치카 이동경로 설정 완료 [카메라 위치 조정 + 카메라 UI 수정 추가 위치 스프라이트 설정]

--- a/DirectX_PKT/MyCore/MyCore.vcxproj.filters
+++ b/DirectX_PKT/MyCore/MyCore.vcxproj.filters
@@ -193,6 +193,9 @@
     <ClCompile Include="EndingBackGround.cpp">
       <Filter>Level\Ending</Filter>
     </ClCompile>
+    <ClCompile Include="Bonni.cpp">
+      <Filter>Animatronics</Filter>
+    </ClCompile>
     <ClCompile Include="Chica.cpp">
       <Filter>Animatronics</Filter>
     </ClCompile>
@@ -308,6 +311,9 @@
     </ClInclude>
     <ClInclude Include="EndingBackGround.h">
       <Filter>Level\Ending</Filter>
+    </ClInclude>
+    <ClInclude Include="Bonni.h">
+      <Filter>Animatronics</Filter>
     </ClInclude>
     <ClInclude Include="Chica.h">
       <Filter>Animatronics</Filter>
