--- a/DirectX_PKT/NewAPP/NewAPP.vcxproj
+++ b/DirectX_PKT/NewAPP/NewAPP.vcxproj
@@ -137,6 +137,7 @@
       <LanguageStandard>stdcpp20</LanguageStandard>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>PreCompile.h</PrecompiledHeaderFile>
+      <TreatWarningAsError>true</TreatWarningAsError>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
